# substrate-template

node/: Cargo.toml
pallets/template/: Cargo.toml
runtime/: Cargo.toml  build.rs
runtime/src/: lib.rs
