[package]
authors = ['Substrate DevHub <https://github.com/substrate-developer-hub>']
build = 'build.rs'
description = 'A fresh FRAME-based Substrate node, ready for hacking.'
edition = '2018'
homepage = 'https://substrate.dev'
license = 'Unlicense'
name = 'node-template'
repository = 'https://github.com/substrate-developer-hub/substrate-node-template/'
version = '2.0.0'

[[bin]]
name = 'node-template'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[build-dependencies]
substrate-build-script-utils = { git = "https://github.com/paritytech/substrate.git" } 

[dependencies]
jsonrpc-core = '15.1.0'
structopt = '0.3.8'

# local dependencies
node-template-runtime = { path = '../runtime' }

# Substrate dependencies
frame-benchmarking = { git = "https://github.com/paritytech/substrate.git" } 
frame-benchmarking-cli = { git = "https://github.com/paritytech/substrate.git" } 
pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/substrate.git" } 
sc-basic-authorship = { git = "https://github.com/paritytech/substrate.git" }
sc-cli = { git = "https://github.com/paritytech/substrate.git", features = ['wasmtime'] }
sc-client-api = { git = "https://github.com/paritytech/substrate.git" } 
sc-consensus = { git = "https://github.com/paritytech/substrate.git" }
sc-consensus-aura = { git = "https://github.com/paritytech/substrate.git" }
sc-executor = { git = "https://github.com/paritytech/substrate.git", features = ['wasmtime'] }
sc-finality-grandpa = { git = "https://github.com/paritytech/substrate.git" }
sc-keystore = { git = "https://github.com/paritytech/substrate.git" }
sc-rpc = { git = "https://github.com/paritytech/substrate.git" } 
sc-rpc-api = { git = "https://github.com/paritytech/substrate.git" }
sc-service = { git = "https://github.com/paritytech/substrate.git", features = ['wasmtime'] }
sc-transaction-pool = { git = "https://github.com/paritytech/substrate.git" } 
sp-api = { git = "https://github.com/paritytech/substrate.git" } 
sp-block-builder = { git = "https://github.com/paritytech/substrate.git" } 
sp-blockchain = { git = "https://github.com/paritytech/substrate.git" } 
sp-consensus = { git = "https://github.com/paritytech/substrate.git" }
sp-consensus-aura = { git = "https://github.com/paritytech/substrate.git" }
sp-core = { git = "https://github.com/paritytech/substrate.git" } 
sp-finality-grandpa = { git = "https://github.com/paritytech/substrate.git" } 
sp-inherents = { git = "https://github.com/paritytech/substrate.git" } 
sp-runtime = { git = "https://github.com/paritytech/substrate.git" } 
sp-transaction-pool = { git = "https://github.com/paritytech/substrate.git" } 
substrate-frame-rpc-system = { git = "https://github.com/paritytech/substrate.git" } 

[features]
default = []
runtime-benchmarks = ['node-template-runtime/runtime-benchmarks']
